<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="false"
        android:focusable="false">

        <LinearLayout
            android:id="@+id/linear_search"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/green">

            <ImageButton
                android:id="@+id/ib_scan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icscan_svg"
                android:padding="10dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/shape_scan"/>
            <SearchView
                android:id="@+id/sv_home"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:searchIcon="@drawable/ic_sv"
                android:queryHint="Offers, food, and place to go"
                android:iconifiedByDefault="true"
                android:queryBackground="@null"
                android:theme="@style/SearchViewTheme"
                android:background="@drawable/shape_sv"/>
        </LinearLayout>

        <View
            android:id="@+id/viewVer"
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="#F6F6F6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_search"/>
        <View
            android:id="@+id/viewHor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F6F6F6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewVer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point"
            android:gravity="center"
            android:textSize="13sp"
            android:fontFamily="@font/sanomat"
            android:textColor="#0E0E0E"
            android:drawablePadding="6dp"
            app:layout_constraintStart_toEndOf="@id/viewVer"
            app:layout_constraintTop_toBottomOf="@id/linear_search"
            app:layout_constraintBottom_toTopOf="@id/viewHor"
            android:layout_marginStart="12dp"
            app:drawableStartCompat="@drawable/point_svg"
            app:drawableEndCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="13sp"
            android:textColor="#0E0E0E"
            android:fontFamily="@font/sanomat"
            android:gravity="center"
            android:drawablePadding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_search"
            app:layout_constraintBottom_toTopOf="@id/viewHor"
            android:layout_marginStart="12dp"
            app:drawableStartCompat="@drawable/ovo_svg"
            app:drawableEndCompat="@drawable/ic_arrow" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_topup"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewHor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_up"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/robotomed"
                    android:drawablePadding="6dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    app:drawableStartCompat="@drawable/topup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sanomat"
                    android:layout_marginStart="5dp"
                    android:drawablePadding="5dp"
                    app:drawableStartCompat="@drawable/ic_titik" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_topup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/food_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/mart_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mart"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/deliv_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/express"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/pulsa_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulsa"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_menu1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/car_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/bike_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/ins_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurance"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/ib_more"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/more_svg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textSize="12sp"
                    android:fontFamily="@font/sanomat"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/viewHor2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#F6F6F6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_menu2"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewHor2">


            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                app:riv_corner_radius="6dp"
                android:scaleType="fitXY"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/thumb0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sanomat"
                android:layout_marginTop="8dp"
                android:text="@string/kejar_diskon_wib_di_tokopedia_dengan_potongan_harga"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sponsored_by_tokopedia"
                android:textSize="13sp"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/sanomat"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/momen_gajian_tiba"
                android:fontFamily="@font/sanomat"
                android:textSize="20sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="35dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                tools:listitem="@layout/item_promo"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:id="@+id/rv_momen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_discovering"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="16"
                tools:listitem="@layout/item_promo"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:id="@+id/rv_discovering"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>