<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="15dp"
    android:paddingBottom="20dp">

    <View
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:background="@color/gray_card"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Explore Grab"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/robotobold"/>


    <LinearLayout
        android:id="@+id/linear_menu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/food_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/mart_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mart"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/deliv_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/express"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/pulsa_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulsa"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_menu2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/car_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/bike_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/ins_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ic_health"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/health_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Health"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_menu3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/hotel_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hotels"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/tiket_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tickets"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/subs_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subscriptions"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_more"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/pembayaran_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Payment"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_menu4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/reward_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rewards"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/groce_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grocerie"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/bill_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grocerie"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/more_svg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="12sp"
                android:fontFamily="@font/sanomat"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>